src/App.css
@import "tailwindcss";

@theme {
  --color-primary: #3a37df;
  --color-background: #f9f9ff;
  --color-background-100: rgba(242, 242, 242, 0.2);
  --color-background-400: rgba(49, 46, 181, 0.09);
  --color-background-500: rgba(26, 0, 0);
  --color-background-700: rgba(82 82 91);
  --color-background-800: rgba(44, 44, 44);
}

.dark {
  --color-primary: #3a37df;
  --color-background: #181818;
  --color-background-100: rgb(32, 32, 32);
  --color-background-400: rgba(255, 255, 255, 0.06);
  --color-background-500: rgba(255, 255, 255, 0.05);
  --color-background-700: rgb(161, 161, 170);
  --color-background-800: rgba(255, 255, 255, 0.6);
}

@custom-variant dark (&:where(.dark, .dark *));

* {
  @apply transition-colors duration-200;
}

.tab-btn {
  @apply flex items-center gap-4 w-full px-5 py-2.5 cursor-pointer text-sm font-medium;
}

.scrollbar {
  scrollbar-color: rgba(255, 255, 255, 0.27) var(--color-background);
  scrollbar-width: thin;
  background: none;
}

